2013-07-02  Larry Pezzaglia  <lmpezzaglia@lbl.gov>

	* utils/chos.init: Add support for link creation in /chos/ and
	improvements to handling /chos/local/

	Merge branch 'pam_chos_config':

	* pam_chos/pam_chos.8: Initial manpage for pam_chos

	* pam_chos/pam_chos.c: Whitespace cleanups

	* pam_chos/pam_chos.c, pam_chos/pam_chos.h: Add configuration
	tracking structure for pam_chos.  Implement user_conf_file and
	fail_to_default options.

2013-07-01  Larry Pezzaglia  <lmpezzaglia@lbl.gov>

	* utils/chos.h, utils/chos.c, utils/chos.1: Implement --help and
	--version options for the chos utility.

	* utils/chos.c: Add argmatch function.

	* utils/chos.c, utils/chos.h: Move function prototypes into
	chos.h.  Whitespace cleanups.

2013-06-28  Larry Pezzaglia  <lmpezzaglia@lbl.gov>

	* Kernel/chos_lkm.c: Restore support for building against the EL5
	kernel family

	* kernel/chos_lkm.c: Check return value from __copy_from_user().

2013-06-27  Larry Pezzaglia  <lmpezzaglia@lbl.gov>

	* 0.11.2 release

	* kernel/chos_lkm.c: Modify the behavior of chos_do_fork to
	explicitly set the CHOS link of new processes to match that of the
	parent process.  do_fork() copies the original process, wakes up the
	new process, and then returns.  This means that there is some amount
	of time where the new process is awake but the real do_fork() has
	not yet returned.  This change should prevent some scenarios
	identified by Doug Jacobsen of NERSC where the child process forks
	its own child process and then exits before its CHOS link is set,
	resulting in the newest child process not receiving the correct CHOS
	link mapping.


2012-10-29  Larry Pezzaglia  <lmpezzaglia@lbl.gov>

	* 0.11.1 release

	* kernel/chos_lkm.c: Fix issue where it was not possible to change
	from the "/" environment back to the previous environment.

2012-10-29  Larry Pezzaglia  <lmpezzaglia@lbl.gov>

	* utils/chos.c, pam_chos/pam_chos.c: Revert "If an invalid CHOS