@@ -1,1 +1,1 @@
-sysconf_DATA = chos chos.conf
+sysconf_DATA = chos chos.conf chos.sys
