@@ -1,0 +1,8 @@
+securedir = $(SECUREDIR)
+secure_LTLIBRARIES = pam_chos.la
+pam_chos_la_SOURCES = pam_chos.c
+pam_chos_la_LIBADD = $(PAM_LIBS)
+pam_chos_la_LDFLAGS = -module -avoid-version -shared
+
+man_MANS = pam_chos.8
+
