@@ -1,5 +1,9 @@
-bin_PROGRAMS = chos
-chos_SOURCES = chos.c
-man_MANS = chos.1
+bin_PROGRAMS = chos job_starter pam_job_starter
+chos_SOURCES = chos.c chos.h
 
+job_starter_SOURCES = job_starter.c
+pam_job_starter_SOURCES = pam_job_starter.c
+pam_job_starter_LDADD = $(PAM_LIBS) $(PAM_MISC_LIBS)
+
+man_MANS = chos.1
 
